# spectral-mobility

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
docs/: preregistration_v1.md  preregistration_v2.md  preregistration_v3.md
examples/: 01_quickstart.py  02_boston_bikeshare.py  03_paris_vs_lyon.py  04_us_eu_split_validation.py  05_paper_ready_validation.py  06_discover_structure.py  07_taxonomy.py  08_atlas_taxonomy.py  09_size_corrected_taxonomy.py  10_taxonomy_robustness.py  11_kde_null_and_gmm.py  12_math_validation.py  13_saturation_smooth_y.py  14_demand_validation.py  15_goldilocks_test.py  16_goldilocks_atlas_proxy.py  17_dirichlet_and_aug_gain.py  18_pre_reg_v2_check.py  19_kde_bandwidth_sensitivity.py  20_block_spatial_cv.py  21_spectral_blocks_and_gap.py  22_robust_block_cv_estimator.py
examples/output/: 04_block_contrasts.csv  04_mantel_correlations.csv  04_split_validation.json  05_baseline_matrix.csv  05_ci_summary.csv  05_multiscale.csv  05_panel.csv  05_permutation.json  06_discovered_clusters.csv  06_discovery.json  06_metadata_mantel.csv  07_taxonomy.csv  08_atlas_features.csv  08_atlas_summary.csv  08_atlas_taxonomy.csv  09_atlas_excess.csv  09_size_stratified.csv  11_finite_size_test.csv  11_gmm_bic.csv  11_kde_excess.csv  12_conjecture_A_ipr_wasserstein.csv  12_conjecture_B_saturation.csv  12_conjecture_C_fits.csv  12_conjecture_C_null_scaling.csv  13_saturation_fits.csv  13_saturation_smooth.csv  14_demand_regression.json  14_demand_results.csv  15_goldilocks_lmm.json  15_goldilocks_results.csv  16_atlas_proxy_lmm.json  16_atlas_proxy_results.csv  17_aug_gain_results.csv  17_dirichlet_results.csv  17_lmm_summary.json  18_pre_reg_v2_check.csv  18_vif_and_lmm.json  19_bandwidth_sweep.csv  20_block_cv_lmm.json  20_block_cv_results.csv  (+5 more)
src/spectral_mobility/: __init__.py  augmentation.py  bound.py  compare.py  diagnostics.py  graph.py  multiscale.py  plots.py  (+4 more)
tests/: test_augmentation.py  test_bound.py  test_diagnostics.py  test_graph.py  test_inductive.py  test_plots.py  test_predictor.py  test_profile_compare.py  test_spectral.py  test_uncertainty_multiscale.py
