[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-mobility"
version = "0.5.0"
description = "Spectral feature augmentation and applicability-domain bounds for urban mobility prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rohan Fossé", email = "rfosse@cesi.fr"},
    {name = "Gaël Pallares"},
]
keywords = [
    "graph signal processing",
    "spectral graph theory",
    "urban mobility",
    "applicability domain",
    "bike-share",
    "structural bounds",
    "machine learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "matplotlib>=3.9",
]
examples = [
    "matplotlib>=3.9",
    "pyarrow>=15.0",
    "lightgbm>=4.3",
]

[project.urls]
Homepage = "https://github.com/cycling-data-lab/spectral-mobility"
Repository = "https://github.com/cycling-data-lab/spectral-mobility"
Issues = "https://github.com/cycling-data-lab/spectral-mobility/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter
